WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123214
CA should be separated from ACCELERATED_COMPOSITING on Windows
https://bugs.webkit.org/show_bug.cgi?id=123214
Summary
CA should be separated from ACCELERATED_COMPOSITING on Windows
Alex Christensen
Reported
2013-10-23 12:35:24 PDT
I got WinCairo to compile and run without crashing using ACCELERATED_COMPOSITING. The poster circle example (
https://www.webkit.org/blog-files/3d-transforms/poster-circle.html
) runs the cpu, but doesn't draw anything, so I'm still missing something, but I'll start uploading my changes for review. Until now, AppleWin was the only port using ACCELERATED_COMPOSITING, so no effort was given to distinguish between the CA code and the ACCELERATED_COMPOSITING code. I've separated the two.
Attachments
Patch
(10.59 KB, patch)
2013-10-23 12:41 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2013-10-23 12:41:13 PDT
Created
attachment 214982
[details]
Patch
Brent Fulgham
Comment 2
2013-10-23 13:31:42 PDT
Comment on
attachment 214982
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-10-23 13:57:37 PDT
Comment on
attachment 214982
[details]
Patch Clearing flags on attachment: 214982 Committed
r157884
: <
http://trac.webkit.org/changeset/157884
>
WebKit Commit Bot
Comment 4
2013-10-23 13:57:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug