Separated USE(CA) from USE(ACCELERATED_COMPOSITING) to prepare WinCairo for accelerated compositing. https://bugs.webkit.org/show_bug.cgi?id=123214

Patch by Alex Christensen <achristensen@webkit.org> on 2013-10-23
Reviewed by Brent Fulgham.

Source/WebCore:

* platform/graphics/PlatformLayer.h:
Added TextureMapperPlatformLayer PlatformLayer declaration for WinCairo.
* platform/graphics/win/MediaPlayerPrivateFullscreenWindow.cpp:
(WebCore::MediaPlayerPrivateFullscreenWindow::createWindow):
(WebCore::MediaPlayerPrivateFullscreenWindow::wndProc):
* platform/graphics/win/MediaPlayerPrivateFullscreenWindow.h:
Added USE(CA) where necessary to compile WinCairo with accelerated compositing.

Source/WebKit/win:

* WebCoreSupport/WebChromeClient.h:
(WebChromeClient::delegatedScrollRequested): Added empty function.
* WebPreferences.cpp:
(WebPreferences::acceleratedCompositingEnabled):
Return true for non-CA ports using accelerated compositing.
* WebView.cpp:
(WebView::~WebView):
(WebView::sizeChanged):
(WebView::paint):
(WebView::setShouldInvertColors):
(WebView::flushPendingGraphicsLayerChangesSoon):
(WebView::setAcceleratedCompositing):
* WebView.h:
Added USE(CA) where necessary to compile WinCairo with accelerated compositing.

Canonical link: https://commits.webkit.org/141327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157884 268f45cc-cd09-0410-ab3c-d52691b4dbfc