Source/WebCore/platform/graphics/PlatformLayer.h
@@ -31,8 +31,13 @@
 #if PLATFORM(MAC)
 OBJC_CLASS CALayer;
 typedef CALayer PlatformLayer;
-#elif PLATFORM(WIN)
+#elif PLATFORM(WIN) && USE(CA)
 typedef struct _CACFLayer PlatformLayer;
+#elif PLATFORM(WIN) && USE(TEXTURE_MAPPER)
+namespace WebCore {
+class TextureMapperPlatformLayer;
+typedef TextureMapperPlatformLayer PlatformLayer;
+};
 #elif PLATFORM(GTK)
 #if USE(TEXTURE_MAPPER_GL)
 namespace WebCore {
